syntax = "proto3";

package upload_v1;

option go_package = "github.com/igortoigildin/goph-keeper/pkg/upload_v1;upload_v1";

message FileUploadRequest {
    string file_name = 1;
    bytes chunk = 2;
}

message FileUploadResponse {
    string file_name = 1;
    uint32 size = 2;
}

service FileService {
    rpc Upload(stream FileUploadRequest) returns(FileUploadResponse);
}